--- a/index.html
+++ b/index.html
@@ -95,18 +95,13 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Обновления-для-Windows.html">Обновления для Windows</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="https://finework.tk/FineWork-Type-PRO.html">FineWork Type PRO</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B-%D0%BE%D1%82-FineWork.html">Игры</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F-%D0%BE%D1%82-FineWork.html">Приложения</a>
-</li></ul>
-</div>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-7"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Сборки-от-Аддерли.html">Главная</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-6"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Сборки-от-Аддерли.html">Главная</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-7-сборки.html">Сборки Windows 7</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-8-0-сборки.html">Сборки Windows 8.0</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
@@ -137,11 +132,6 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="СтарыйСофт-для-Windows-XPVista.html">Софт для старых Windows</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Ключи-от-Аддерли.html">Ключи от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Обновления-для-Windows.html">Обновления для Windows</a>
-</li></ul>
-</div>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="FineWork.html">FineWork</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/FineWork-Type-PRO.html">FineWork Type PRO</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B-%D0%BE%D1%82-FineWork.html">Игры</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F-%D0%BE%D1%82-FineWork.html">Приложения</a>
 </li></ul>
 </div>
 </li></ul>
@@ -186,7 +176,7 @@
         <h3 class="u-hidden-sm u-hidden-xs u-text u-text-white u-text-2">Последний ролик</h3>
         <div class="u-align-center u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-hidden-sm u-hidden-xs u-preserve-proportions u-video u-video-contain u-video-1">
           <div class="embed-responsive embed-responsive-1">
-            <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/l8iepnR29NY?mute=1&amp;showinfo=0&amp;controls=1&amp;start=0&amp;autoplay=1" data-autoplay="1" frameborder="0" allowfullscreen=""></iframe>
+            <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/rFmRRrfw1xA?mute=1&amp;showinfo=0&amp;controls=1&amp;start=0&amp;autoplay=1" data-autoplay="1" frameborder="0" allowfullscreen=""></iframe>
           </div>
         </div>
       </div>
