--- a/СтарыйСофт-для-Windows-XPVista.html
+++ b/СтарыйСофт-для-Windows-XPVista.html
@@ -42,7 +42,7 @@
     ".replace(/gascript/g, 'script'));
     }
     </script><script async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6276505933668266" crossorigin="anonymous"></script></head>
-  <body class="u-body u-xl-mode" data-lang="ru"><header class="u-black u-clearfix u-header u-sticky u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-custom-color-8 u-header u-sticky u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-enable-responsive u-text u-text-default u-text-1">
           <a class="u-btn u-button-link u-button-style u-none u-text-body-alt-color u-btn-1" href="Сборки-от-Аддерли.html" data-page-id="25875748">Сборки от Аддерли</a>
         </p>
@@ -55,7 +55,7 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-black u-black u-border-palette-1-base u-button-style u-hover-black u-nav-link u-text-active-custom-color-24 u-text-hover-custom-color-10" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-custom-color-8 u-border-palette-1-base u-button-style u-custom-color-8 u-hover-custom-color-8 u-nav-link u-text-active-custom-color-5 u-text-hover-custom-color-9" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-XP-сборки.html">Сборки Windows XP</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-7-сборки.html">Сборки Windows 7</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-8-0-сборки.html">Сборки Windows 8.0</a>
@@ -65,15 +65,16 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-Lite-x32-сборки.html">Сборки Windows Lite x32</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Оригинальные-Windows.html">Оригинальные Windows</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-black u-black u-border-palette-1-base u-button-style u-hover-black u-nav-link u-text-active-custom-color-24 u-text-hover-custom-color-10" href="Новости.html" style="padding: 10px 20px;">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Новости.html">Новости</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-8 u-border-palette-1-base u-button-style u-custom-color-8 u-hover-custom-color-8 u-nav-link u-text-active-custom-color-5 u-text-hover-custom-color-9" href="Новости.html" style="padding: 10px 20px;">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Новости.html">Новости</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="https://forms.gle/ZY5cRsox5CdjH8v58">Оставить отзыв</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="https://donatello.to/adderly">Поддержать автора</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-black u-black u-border-palette-1-base u-button-style u-hover-black u-nav-link u-text-active-custom-color-24 u-text-hover-custom-color-10" href="Информация-о-сборках.html" style="padding: 10px 20px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-8 u-border-palette-1-base u-button-style u-custom-color-8 u-hover-custom-color-8 u-nav-link u-text-active-custom-color-5 u-text-hover-custom-color-9" href="Информация-о-сборках.html" style="padding: 10px 20px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
@@ -82,7 +83,7 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Как-устанавливать.html">Как устанавливать</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-black u-black u-border-palette-1-base u-button-style u-hover-black u-nav-link u-text-active-custom-color-24 u-text-hover-custom-color-10" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-8 u-border-palette-1-base u-button-style u-custom-color-8 u-hover-custom-color-8 u-nav-link u-text-active-custom-color-5 u-text-hover-custom-color-9" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Старые-версии-Windows.html">Старые версии Windows</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="СтарыйСофт-для-Windows-XPVista.html">Софт для старых Windows</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Ключи-от-Аддерли.html">Ключи от Аддерли</a>
@@ -95,38 +96,39 @@
             <div class="u-black u-border-3 u-border-grey-75 u-container-style u-inner-container-layout u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-6"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Сборки-от-Аддерли.html" style="padding-top: 16px; padding-bottom: 16px;">Главная</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-grey-75 u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-75 u-nav-link" href="Windows-XP-сборки.html">Сборки Windows XP</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-75 u-nav-link" href="Windows-7-сборки.html">Сборки Windows 7</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-75 u-nav-link" href="Windows-8-0-сборки.html">Сборки Windows 8.0</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-75 u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-75 u-nav-link" href="Windows-10-сборки.html">Сборки Windows 10</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-75 u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-75 u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-75 u-nav-link" href="Windows-Lite-x32-сборки.html">Сборки Windows Lite x32</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-75 u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-75 u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-6"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Сборки-от-Аддерли.html">Главная</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-XP-сборки.html">Сборки Windows XP</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-7-сборки.html">Сборки Windows 7</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-8-0-сборки.html">Сборки Windows 8.0</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-10-сборки.html">Сборки Windows 10</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-x32-сборки.html">Сборки Windows Lite x32</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Оригинальные-Windows.html">Оригинальные Windows</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Новости.html" style="padding-top: 16px; padding-bottom: 16px;">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-grey-75 u-nav-link" href="Новости.html">Новости</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-75 u-nav-link" href="https://forms.gle/ZY5cRsox5CdjH8v58">Оставить отзыв</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-75 u-nav-link" href="https://donatello.to/adderly">Поддержать автора</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Новости.html">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Новости.html">Новости</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://forms.gle/ZY5cRsox5CdjH8v58">Оставить отзыв</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://donatello.to/adderly">Поддержать автора</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Информация-о-сборках.html" style="padding-top: 16px; padding-bottom: 16px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-grey-75 u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-75 u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-75 u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-75 u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-75 u-nav-link" href="Отзывы-и-обзоры.html">Отзывы и обзоры</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-75 u-nav-link" href="Проверка-на-целостность.html">Проверка на целостность</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-75 u-nav-link" href="Как-устанавливать.html">Как устанавливать</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Отзывы-и-обзоры.html">Отзывы и обзоры</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Проверка-на-целостность.html">Проверка на целостность</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Как-устанавливать.html">Как устанавливать</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html" style="padding-top: 16px; padding-bottom: 16px;">Софт от Аддерли</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-grey-75 u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-75 u-nav-link" href="Старые-версии-Windows.html">Старые версии Windows</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-75 u-nav-link" href="СтарыйСофт-для-Windows-XPVista.html">Софт для старых Windows</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-75 u-nav-link" href="Ключи-от-Аддерли.html">Ключи от Аддерли</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-75 u-nav-link" href="Обновления-для-Windows.html">Обновления для Windows</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Старые-версии-Windows.html">Старые версии Windows</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="СтарыйСофт-для-Windows-XPVista.html">Софт для старых Windows</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Ключи-от-Аддерли.html">Ключи от Аддерли</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Обновления-для-Windows.html">Обновления для Windows</a>
 </li></ul>
 </div>
 </li></ul>
@@ -172,8 +174,8 @@
     </section>
     
     
-    <footer class="u-align-center u-black u-clearfix u-footer u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Mark Adderly / Марк Аддерли<br>
+    <footer class="u-align-center u-clearfix u-custom-color-8 u-footer u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-sheet-1">
+        <p class="u-small-text u-text u-text-variant u-text-white u-text-1">Mark Adderly / Марк Аддерли<br>
         </p>
       </div></footer>
   
